# embedded-fire-occupancy

./: .gitignore  README.md  west.yml
.github/workflows/: ci.yml  release.yml
base_station/: CMakeLists.txt  Kconfig  prj.conf
base_station/boards/: rpi_pico2_rp2350a_m33.overlay
base_station/drivers/sensor/: CMakeLists.txt
base_station/drivers/sensor/remote_pico/: CMakeLists.txt  Kconfig  remote_pico.c  remote_pico.h
base_station/dts/bindings/sensor/: vnd,remote-pico.yaml
base_station/src/: config_mode.c  config_mode.h  fire_alarm.c  fire_alarm.h  main.c  remote_pico_display.c  remote_pico_display.h  remote_pico_interrupts.c  remote_pico_interrupts.h
sensor_node/: CMakeLists.txt  prj.conf
sensor_node/boards/: rpi_pico2_rp2350a_m33.overlay
sensor_node/src/: main.c
sensor_node/src/i2c/: i2c_target.c  i2c_target.h
sensor_node/src/registers/: register_map.c  register_map.h
sensor_node/src/sensors/bme680/: bme680.c  bme680.h
sensor_node/src/sensors/mlx90614/: mlx90614.c  mlx90614.h
sensor_node/src/sensors/mmwave/: mmwave.c  mmwave.h  uart.c  uart.h
sensor_node/src/sensors/spw2430/: spw2430.c  spw2430.h
